# ModelCub

./: .gitignore  README.md  modelcub-spec.md  modelcub.yaml  playground.py  pyproject.toml  pytest.ini  requirements.txt  timeline.md
.modelcub/: jobs.db
a/: modelcub.yaml
aa/: modelcub.yaml
aaaaa/: modelcub.yaml
abc/: modelcub.yaml  playground.py
ad/: modelcub.yaml
b/: modelcub.yaml
docs/: index.md  netlify.toml  package-lock.json  package.json
exemple/: notebook.ipynb
k/: .gitignore  modelcub.yaml
kmmm/: modelcub.yaml
lmfao/: modelcub.yaml  notebook.ipynb
playground/: notebook.ipynb  playground.py  playground_annotations.py  test_sdk_import.py
project/: modelcub.yaml
test-mc/: modelcub.yaml
test-project/: modelcub.yaml
tests/: conftest.py  test_annotation_components.py  test_annotation_service.py  test_cli_hardware_warning.py  test_cli_wiring.py  test_commands_about.py  test_commands_dataset_more.py  test_commands_negative.py  test_commands_thin_wire.py  test_config_loading.py  test_core_discover.py  test_core_generate.py  test_core_generate_cv2_direct.py  test_core_generate_cv2_path.py  test_core_generate_cv2_requires_numpy.py  test_core_generate_imports_and_edges.py  test_core_generate_pil_direct.py  test_core_generate_public_cv2.py  test_core_hardware.py  test_core_io.py  test_core_io_negative.py  test_core_paths.py  test_core_yaml_cfg.py  test_dataset_from_images_basic.py  test_dataset_service.py  test_delete_safety.py  test_init_architecture.py  test_init_smoke.py  test_modelcub_cli.py  test_modelcub_sdk.py  test_project_service.py  (+6 more)
(+320 files in other folders)
